<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_splash_scene"
    tools:context=".ui.splash.SplashFragment">
    <!--image view blue-->
    <ImageView
        android:id="@+id/blue_digiato"
        android:layout_width="@dimen/_100mdp"
        android:layout_height="@dimen/_100mdp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />
    <!--name app-->
    <com.mehdisekoba.digiato.utils.views.lightprogress.LightProgress
        android:id="@+id/lightProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30mdp"
        android:text="@string/digiato"
        android:textSize="@dimen/_22font_mdp"
        app:fontPath="@font/is_mobile_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blue_digiato"
        app:light_color="@color/Blue_cola" />
    <!--description-->
    <TextView
        android:id="@+id/txt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12mdp"
        android:text="@string/digiato_description"
        style="@style/title_Style"
        android:textAppearance="@style/TextAppearance_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lightProgress" />

    <!--loading-->
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16mdp"
        android:indeterminate="true"
        app:indicatorColor="@color/Blue_cola"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_description"
        app:showAnimationBehavior="inward"
        app:showDelay="500" />
</androidx.constraintlayout.motion.widget.MotionLayout>