<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <!--profile-->
    <com.skydoves.androidveil.VeilLayout
        android:id="@+id/veilLayout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="@dimen/_26mdp"
        android:elevation="@dimen/_4mdp"
        app:layout_constraintTop_toTopOf="parent"
        app:veilLayout_radius="@dimen/_32mdp"
        app:veilLayout_shimmerEnable="true"
        app:veilLayout_veiled="false">
        <!--content-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--back-->
            <ImageView
                android:id="@+id/img_back"
                android:layout_width="@dimen/_32mdp"
                android:layout_height="@dimen/_32mdp"
                android:layout_marginHorizontal="@dimen/_12mdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4mdp"
                android:src="@drawable/arrow_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/iconTintStyle" />
            <!--title-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10mdp"
                android:text="@string/user_profile"
                android:textAppearance="@style/TextAppearance_Bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/img_back"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/title_Style"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.skydoves.androidveil.VeilLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/veilLayout_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/_6mdp"
        android:layout_marginHorizontal="@dimen/_12mdp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--bottom-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10mdp"
                android:text="@string/create_account"
                android:textAppearance="@style/TextAppearance_Bold"
                android:textColor="@color/white"
                app:backgroundTint="@color/Safety_orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <!--des login or singUp-->
            <TextView
                android:id="@+id/txt_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6mdp"
                android:lineSpacingExtra="@dimen/_6mdp"
                android:text="@string/login"
                android:textAppearance="@style/TextAppearance_Bold"
                app:layout_constraintEnd_toEndOf="@id/btn_create_account"
                app:layout_constraintStart_toStartOf="@id/btn_create_account"
                app:layout_constraintTop_toBottomOf="@id/btn_create_account" />
            <!--Order-->
            <LinearLayout
                android:id="@+id/orderContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10mdp"
                android:orientation="vertical"
                android:paddingVertical="@dimen/_8mdp"
                app:layout_constraintTop_toBottomOf="@id/txt_desc">

            <include
                android:id="@+id/orderLay"
                layout="@layout/profile_user_order" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>